<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Randomizer</string>
    
    <!-- Main Activity Texts -->
    <string name="menu_text">Menu</string>
    <string name="clear_all_text">Clear All</string>
    <string name="add_text">Add</string>
    <string name="pick_choice_text">Pick a Choice</string>
    <string name="randomize_order_text">Randomize Order</string>
    <string name="load_list_text">Load List</string>
    <string name="save_list_text">Save List</string>
    <string name="randomize_number_text">Randomize Number</string>
    <string name="input_selection_colon_text">Input Your Selections Here:</string>
    <string name="your_selections_text">Your Selections</string>
    <string name="alert_text">Alert!</string>
    <string name="empty_selection_alert_message">
        There are no choices to pick from or randomly order from.
		Please input choices into the list of selections.
    </string>
    <string name="empty_selection_save_alert_message">
        Your selections list is empty. Please add selections before saving.
    </string>
    <string name="alert_why_description_message">
        Logging in with your Email and Password allows you to access your saved lists on
        multiple android devices. It is not mandatory to login, but you will only be able to
        access your saved lists on this device only. If you choose to login, we insist that
        you DO NOT store any private information (for example: credit numbers, social identity
        numbers and etc.), as we will NOT BE RESPONSIBLE for any stolen information.
    </string>
    <string name="alert_confirm_delete_list_message">
        Are you sure you want to delete this list?
    </string>
    <string name="alert_ty_message">
       	THANK YOU for making a Donation. Feel free to email us at 
       	thinking.while.true@gmail.com if have any suggestions or improvements
       	that can be made to Randomizer. THANK YOU!!!
    </string>
    <string name="alert_save_failed_message">
        Saving list to file failed. Try Again!
    </string>
    <string name="alert_select_text_file_message">
        Please select text (*.txt) file. Make sure your text file is structured in a way that
        each line is a selection/choice.
    </string>
    <string name="alert_not_text_file_message">
        You have selected the wrong file. Please select a text file.
    </string>
    <string name="alert_file_dne_message">
        File you have selected does not exists on your device.
    </string>
    <string name="ok_text">OK</string>
    <string name="saving_list_text">Saving List</string>
    
    <!-- Menu Texts -->
    <string name="view_previous_choices_text">View Previous Choices</string>
    <string name="view_saved_ordered_lists_text">View Saved Ordered Lists</string>
    <string name="about_randomizer_text">About Randomizer</string>
    <string name="logout_text">Logout</string>
    
    <!-- Result Activity Text -->
    <string name="result_text">Result</string>
    <string name="randomizer_has_selected_text">Randomizer Has Selected</string>
    <string name="randomized_order_text">Randomized Order</string>
    <string name="save_and_back_text">Save and Back</string>
    <string name="back_text">Back</string>
    <string name="again_text">Again</string>
    
    <!-- About Activity Texts -->
    <string name="about_text">About</string>
    <string name="donate_text">Donate</string>
    <string name="donate_msg_text">
        If you like this app, please consider making some donation.
    </string>
    <string name="thank_you_caps_text">THANK YOU!!</string>
    
    <!-- Number Selector Dialog Activity -->
    <string name="input_number_range_text">Input Number Range</string>
    <string name="from_colon_text">From:</string>
    <string name="to_colon_text">To:</string>
    <string name="cancel_text">Cancel</string>
    <string name="num_selector_info_text">Please input number range:</string>
    <string name="one_text">1</string>
    <string name="ten_text">10</string>
    
    <!-- Get List Name Dialog Activity -->
    <string name="enter_list_name_colon_text">Enter List Name:</string>
    <string name="optional_brackets_text">(Optional)</string>
    
    <!-- Get File Name Dialog Activity -->
    <string name="enter_file_name_colon_text">Enter Filename:</string>
    <string name="save_file_text">Save File</string>
    
    <!-- Show Saved Randomized Activity -->
    <string name="prev_selected_choices_text">Previously Selected Choices</string>
    <string name="saved_randomized_list_text">Saved Randomized Lists</string>
    <string name="none_text">NONE</string>
    
    <!-- Saved List Activity -->
    <string name="delete_list_text">Delete List</string>
    <string name="delete_text">Delete</string>
    <string name="saved_lists_text">Saved Lists</string>
    <string name="select_list_colon_info_text">Select the list that you would like to load:</string>
    <string name="deleting_list_text">Deleting List</string>
    
    <!-- Login Activity -->
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="skip_login_text">Skip Login</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="why_login_text">Why Login?</string>
    
    <!-- Donate Dialog Activity -->
    <string name="donate_main_info_text">
        Donation is optional. Randomizer will work with or without donations and will 
        continuously be free. But making donations will go a long way by giving back 
        to the developer and a reason to improve the user experience and adding features.
    </string>
    <string name="one_dollar_text">$1.00</string>
    <string name="two_dollar_text">$2.00</string>
    <string name="three_dollar_text">$3.00</string>
    
    <!-- Edit List Activity -->
    <string name="edit_list_title_text">Edit List</string>
    <string name="list_name_colon_text">List name:</string>
    <string name="your_selections_colon_text">Your Selections:</string>
    <string name="add_new_selection_text">Add New Selection</string>
    <string name="enter_list_name_text">Enter List Name</string>
    
    <!-- Misc. -->
    <string name="imageview_content_description">ImageView</string>
    <string name="imagebutton_content_description">ImageButton</string>
</resources>
