<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue"
        android:gravity="center"
        android:paddingBottom="@dimen/default_medium"
        android:paddingTop="@dimen/default_medium"
        android:text="@string/alert_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_medium"
        android:layout_marginRight="@dimen/default_medium"
        android:layout_marginTop="@dimen/default_medium"
        android:text="@string/enter_file_name_colon_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/agfn_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_medium"
        android:background="@drawable/default_edittext"
        android:ems="10"
        android:hint="@string/optional_brackets_text" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/default_medium"
        android:layout_marginRight="@dimen/default_medium"
        android:layout_marginTop="@dimen/default_small"
        android:background="@color/border_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/agfn_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_small"
            android:layout_marginLeft="@dimen/default_medium"
            android:layout_marginRight="@dimen/default_small"
            android:layout_marginTop="@dimen/default_small"
            android:layout_weight="1"
            android:background="@drawable/init_white_button"
            android:onClick="onButtonClick"
            android:text="@string/save_list_text"
            android:textColor="@drawable/black_white_text_color" />

        <Button
            android:id="@+id/agfn_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_small"
            android:layout_marginLeft="@dimen/default_small"
            android:layout_marginRight="@dimen/default_medium"
            android:layout_marginTop="@dimen/default_small"
            android:layout_weight="1"
            android:background="@drawable/init_white_button"
            android:onClick="onButtonClick"
            android:text="@string/cancel_text"
            android:textColor="@drawable/black_white_text_color" />
    </LinearLayout>

</LinearLayout>