<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Top Navigation Bar -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/ab_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/imagebutton_content_description"
            android:onClick="onButtonClick"
            android:padding="@dimen/default_small"
            android:src="@drawable/left_arrow_button" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_medium"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ab_main_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/default_medium"
                android:text="@string/donate_msg_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thank_you_caps_text"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/ab_donate_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/init_white_button"
                android:onClick="onButtonClick"
                android:text="@string/donate_text"
                android:layout_marginTop="@dimen/default_small"
                android:layout_marginLeft="@dimen/default_xxxlarge"
                android:layout_marginRight="@dimen/default_xxxlarge"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>