<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Top Navigation Bar -->
    <RelativeLayout
        android:id="@+id/asps_top_nav_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue" >

        <ImageButton
            android:id="@+id/asps_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/imagebutton_content_description"
            android:onClick="onButtonClick"
            android:padding="@dimen/default_small"
            android:src="@drawable/left_arrow_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/default_xxxlarge"
            android:layout_marginRight="@dimen/default_xxxlarge"
            android:text="@string/prev_selected_choices_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:gravity="center" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" >

        <LinearLayout
            android:id="@+id/asps_list_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_medium"
            android:orientation="vertical"/>
    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/asps_back_nav_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_small"
            android:background="@drawable/init_white_buttons"
            android:onClick="onButtonClick"
            android:text="@string/back_text"
            android:textColor="@drawable/black_white_text_color" />
    </LinearLayout>
</LinearLayout>