<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Top Navigation Bar -->
    <RelativeLayout
        android:id="@+id/assr_top_nav_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue" >

        <ImageButton
            android:id="@+id/assr_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/imagebutton_content_description"
            android:onClick="onButtonClick"
            android:padding="@dimen/default_small"
            android:src="@drawable/left_arrow_button" />

        <TextView
            android:id="@+id/assr_page_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/default_xxxlarge"
            android:layout_marginRight="@dimen/default_xxxlarge"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" >
        
	    <ScrollView
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_centerInParent="true"
	        android:overScrollMode="never" >
	
	        <LinearLayout
	            android:id="@+id/assr_list_layout"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:visibility="invisible"/>
	    </ScrollView>
	    
	    <TextView
	        android:id="@+id/assr_none_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/none_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/border_color"
            android:visibility="invisible" />

	    <ProgressBar
	        android:id="@+id/assr_progressbar"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_centerInParent="true" />
    </RelativeLayout>

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/assr_back_nav_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_small"
            android:background="@drawable/init_white_buttons"
            android:onClick="onButtonClick"
            android:text="@string/back_text"
            android:textColor="@drawable/black_white_text_color" />
    </LinearLayout>
</LinearLayout>